# atomic_habits

./: .env_example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  runtests.py
.github/workflows/: deploy.yml
compose/nginx/: Dockerfile
config/: settings.py  urls.py
docs/: auth.py  schemas.py
habits/: models.py  pagination.py  permissions.py  serializers.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py
telegram_bot/: admin.py  apps.py  handlers.py  models.py  tasks.py  tests.py  urls.py  views.py
telegram_bot/management/commands/: set_webhook.py
telegram_bot/migrations/: 0001_initial.py
users/: authentication.py  managers.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_phone_alter_user_email.py  0003_alter_user_options_alter_user_managers_and_more.py
